# win-proxychains

./: Cargo.toml  LICENSE.md  README.md  build.bat  test.bat
crates/magpie-process/: Cargo.toml
crates/magpie-process/src/: lib.rs  pe_file.rs  process.rs  scoped_handle.rs
crates/magpie-process/tests/: process.rs
crates/win-proxychains/: Cargo.toml
crates/win-proxychains/src/: config.rs  hook.rs  hooks_dns.rs  hooks_ntdll.rs  hooks_sockets.rs  lib.rs  map_pe.rs  socks.rs  sync.rs  trace.rs
crates/winapi-allocator/: Cargo.toml
crates/winapi-allocator/src/: lib.rs
