[package]
name = "magpie-process"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true

[dependencies.windows-sys]
workspace = true
features = [
    "Wdk_Foundation",
    "Wdk_System_Memory",
    "Wdk_System_SystemServices",
    "Wdk_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_RemoteDesktop",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
]
