[package]
name = "win-proxychains"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "win_proxychains_dll"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "win-proxychains"
path = "src/bin/main.rs"

[[bin]]
name = "win-proxychains-test-target"
path = "src/bin/win_proxychains_test_target.rs"

[dependencies]
clap.workspace = true
iced-x86.workspace = true
magpie-process.workspace = true
anyhow.workspace = true

[dependencies.windows-sys]
workspace = true
features = [
    "Wdk_Foundation",
    "Wdk_System_Memory",
    "Wdk_System_SystemServices",
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Kernel",
  "Win32_System_LibraryLoader",
  "Win32_System_IO",
  "Win32_System_Memory",
  "Win32_System_RemoteDesktop",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
